--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
 {deps, [
 	{cowboy, ".*",
-		{git, "git://github.com/ninenines/cowboy.git", {tag, "1.0.1"}}}
+		{git, "git://github.com/ninenines/cowboy.git", "1.0.1"}}
 ]}.
